--- a/content/post/2020-07-20-animate-interactive-objects-with-face-detection-javascript-and-chrome-browser.Rmd
+++ b/content/post/2020-07-20-animate-interactive-objects-with-face-detection-javascript-and-chrome-browser.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(echo = TRUE, eval = FALSE)
 
 We spend the majority of our time in front of screens. It's mostly one of computer/tablet/phone/tv^[Maybe also Peloton, car display, watch, Mirror... (if you're fancy).]. These are largely platforms the user owns or controls. I'm surprised we don't yet have more interactions with screens *out in the world*. 
 
-Face detection and object recognition technologies are now highly accessible, making it easy to create interactive screens. In this post I'll describe my starting place on a small project using this technology to create a display designed to unnerve the user. 
+Face detection and object recognition technologies are now highly accessible, making it easy to use a camera to make a display interactive. In this post I'll describe my starting place on a small project using this technology to create an animation designed to unnerve the user. 
 
 # Things following you
 
@@ -33,13 +33,13 @@ An army recruiter with an "I want you" Uncle Sam  poster behind him whose finger
 <center>
 ![Uncle Sam](https://upload.wikimedia.org/wikipedia/commons/thumb/1/1d/Unclesamwantyou.jpg/440px-Unclesamwantyou.jpg){width="50%"}
 </center>
-Or imagine bumping into someone at the grocery store during COVID19 whose shirt beeps and flashes red if you get within 6 feet of them.
+Someone at the grocery store (during COVID19) whose shirt beeps and flashes red if you get within 6 feet of them.
 
 I intentionally made these examples somewhat dystopian. There is an important societal reckoning taking place right now regarding tracking technologies (particularly in regard to its impacts on communities of color). I wanted to work on something that, while playful, would call to mind concerns of a 'Big Brother' or 'watchful eye' like figure.
 
 # Codepen example
 
-As a starting place, I focused on animating an eye that would track a user that looked at them^[And that could be easily shared across devices.].
+As a starting place, I focused on animating an eye that would track a user that looked at it^[And that could be easily shared across devices.].
 
 **Here is my first draft:**
 
@@ -48,7 +48,7 @@ As a starting place, I focused on animating an eye that would track a user that 
 *If you want to set it up:*
 
 * Open a Chrome browser and enable [experimental web platform features](chrome://flags/#enable-experimental-web-platform-features) (currently only works on Chrome and does not yet work on Android, iOS, or Linux)
-* Go to my [codepen](https://codepen.io/brshallo/full/qBbyrLg)^[This is my first project using JavaScript (don't expect much when it comes to code quality).])
+* Go to my [codepen](https://codepen.io/brshallo/full/qBbyrLg)^[This is my first project using JavaScript (don't expect much when it comes to code quality).]
 * Allow use of webcam when prompted 
 * For a better view, ensure you are on the 'Results' tab and press the F11 key to hide the browser bar
 * You will likely need to refresh when opening or when resizing
@@ -57,7 +57,7 @@ If you want to use it to creep out the family members you are locked at home wit
 
 # How I made it
 
-To get the video and initial face detection set-up, I copied code from [this github repo](https://github.com/wesbos/beginner-javascript/tree/764f0d589e6affeda2c0b6f17874311188de0d57/exercises/55%20-%20Face%20Detection%20Censorship) by [Wes Bos](https://twitter.com/wesbos). To animate the eye, I used an html5 canvas element and javascript. Mostly, the eye follows your position in the video. Though I did a few things to make the eye movement look more interesting:
+To get the video and initial face detection set-up, I copied code from [this github repo](https://github.com/wesbos/beginner-javascript/tree/764f0d589e6affeda2c0b6f17874311188de0d57/exercises/55%20-%20Face%20Detection%20Censorship) by [Wes Bos](https://twitter.com/wesbos). To animate the eye I used an html5 canvas element and JavaScript. The eye simply follows your position in the video. Though I did a few things to make the eye movement look more interesting:
 
 * Rather than updating with every frame, it estimates your position based on the moving average of 10 frames, this makes the movement appear more smooth and softens the jitters of the algorithm constantly updating its estimate of your position.
 * I used some trigonometry to soften the tracking so that the pupil's movement would look more realistic at a distance. 
@@ -84,11 +84,11 @@ but tailored to where the user is standing. However this may be limited^[Afteral
 
 **Improve everything else:**
 
-The above improvements would require a great deal more sophistication in the animation. I'd also like to improve the code quality. However, all of these [Next steps] are largely aspirational -- this project is *far removed* from my day job and I am inexperienced in much of the underlying technologies / software. Hence I'm unsure when I'll pick this back-up^[But wanted to at least post this first draft].
+The above improvements would require a great deal more sophistication in the animation. I'd also like to improve the code quality. All of these [Next steps] are largely aspirational -- this project is *far removed* from my day job and I am inexperienced in much of the underlying technologies / software. Hence I'm unsure when I'll pick this back-up^[But wanted to at least post this first draft].
 
-# Path, Learning and Resources
+# Learning path and resources
 
-My initial plan for building the tracking eyes was to use the python bindings for OpenCV^[Open Computer Vision] for the face detection and then use the open source video editing software, *Blender* (which can also run python scripts), to overlay an animation. See [example](https://www.youtube.com/watch?v=O7nNO3FLkLU) where someone uses webcam and Blender to demo their face animations on a character. A problem with this approach is that Blender is not a light-weight application. Hence I wasn't sure how I would easily deploy it... so I investigated alternative approaches.
+My initial plan (for building the eye tracking component) was to use the python bindings for OpenCV^[Open Computer Vision] for the face detection. I would then use the open source video editing software, *Blender* (which can also run python scripts) to overlay an animation^[Or some python animation library I might be able to find.]. See [example](https://www.youtube.com/watch?v=O7nNO3FLkLU) where someone uses webcam and Blender to demo their face animations on a character. A problem with this approach is that Blender is not a light-weight application. Hence I wasn't sure how I would easily deploy it... so I investigated alternative approaches.
 
 Near the end of [this presentation](https://www.youtube.com/watch?v=8p5SDI4TNDc) by [Cassie Evans](https://twitter.com/cassiecodes?lang=en) on making interactive SVG images is where I learned about Google Chrome's experimental shape detection API. I then found Wes Bos's tweet on the subject.
 
@@ -98,8 +98,8 @@ I decided to go this route because of the relative simplicity of the shape detec
 
 *Preliminary learning resources:*
 
-* About 40% of the videos/exercies from the first three courses of [University of Michigan's Web Design series on coursera](https://www.coursera.org/specializations/web-design#courses) by [Colleen van Lent ](https://twitter.com/ColleenAtUMSI)
-* The first several chapters of [Learn to Code HTML & CSS](https://learn.shayhowe.com/html-css/building-your-first-web-page/) by [Shay Howe](https://twitter.com/shayhowe)
+* About 40% of the videos/exercises from the first three courses of [University of Michigan's Web Design series on coursera](https://www.coursera.org/specializations/web-design#courses) by [Colleen van Lent ](https://twitter.com/ColleenAtUMSI)
+* The first few chapters of [Learn to Code HTML & CSS](https://learn.shayhowe.com/html-css/building-your-first-web-page/) by [Shay Howe](https://twitter.com/shayhowe)
 * Most of the [tutorials on HTML5 canvas](https://www.youtube.com/watch?v=EO6OkltgudE&list=PLpPnRKq7eNW3We9VdCfx9fprhqXHwTPXL) elements by [Chris Courses](https://twitter.com/chriscourses?lang=en)
 
 Rather than using SVG's, I ended-up just using a canvas element and JavaScript^[Again, don't expect much when it comes to code quality.]. 
