--- a/content/post/2020-08-11-pricing-insights-from-historical-data-part-1.Rmd
+++ b/content/post/2020-08-11-pricing-insights-from-historical-data-part-1.Rmd
@@ -1,76 +1,165 @@
 ---
-title: Pricing insights from historical data (part 1)
+title: Evaluating Product Prices (Part 1)
 author: Bryan Shalloway
 date: '2020-08-11'
-slug: pricing-insights-from-historical-data-part-1
 categories:
-  - rstats
-  - r
-  - programming
   - business
-tags:
-  - rstats
+  - programming
   - r
+  - rstats
+tags:
+  - r
+  - rstats
+slug: pricing-insights-from-historical-data-part-1
 ---
 
 
->"All models are wrong, some models are useful." -"Tukey"
+>"All models are wrong, but some are useful." -George Box
 
-Setting prices for large complicated products is challenging, particularly in [business to business](link to helpful resource) (B2B) contexts. B2B sellers may lack information, e.g. accurate 'street' prices for the various configurations of their products. However they typically *do have* historical data on internal sales transactions as well as leadership with a strong desire for *insights* into pricing behavior. The [Pricing challenges] section in the [Appendix] discusses potential internal and external limitations -- in this post I'll put aside the question of *how* to set prices. Instead, I’ll walk through some straight forward, statistical methods you can use to evaluate differences, trends, and abnormalities in your organizations pricing that rely only on historical sales information.
+# Problem context
 
-With internal data^[Internal sales data alone is limited in that its focused on only a component of sales, rather than considering the full picture -- this puts the analyst in a familiar position of one with incomplete information, and a constrained scope of influence.] you can still support answers to many important questions and provide a starting place towards more sophisticated pricing strategies or analyses. I will tackle some potential questions:
+Setting prices for large complicated products is challenging, particularly in [business to business](link to helpful resource) (B2B) contexts. B2B sellers may lack information, e.g. accurate estimates of customer budget or 'street' prices for the various configurations of their products. However they typically *do have* historical data on internal sales transactions as well as leadership with a strong desire for *insights* into pricing behavior. The [Pricing challenges] section discusses potential internal and external limitations in setting prices. For now I'll put aside the question of *how* to set prices. Instead, I’ll walk through some statistical methods that rely only on historical sales information and that can be used to evaluate differences, trends, and abnormalities in your organizations pricing.
 
-* Which factors influence price? What is the magnitude of the influence?
-* How have these factors changed over time?
-* Which customers seem to fall outside the 'normal' behavior in regard to the price they are receiving?
+With internal data^[Internal sales data alone is limited in that its focused on only a component of sales, rather than considering the full picture -- this puts the analyst in a familiar position of one with incomplete information, and a constrained scope of influence.] you can still support answers to many important questions and provide a starting place towards more sophisticated pricing strategies or analyses. In a series of posts I will tackle the following questions:
 
-For my examples, I will use data from the Ames, Iowa housing market. See [Dataset considerations] in the [Appendix] for why I chose it as well as problems with using the [ames](link to make_ames function) dataset as an analogue for B2B selling/pricing scenarios. My examples were built using the R programming language, you can find the source code at my [github] page.
+1. How do differences in product components associate with differenes in price? What is the magnitude of the influence of these factors?
+1. How have these factors changed over time?
+1. Which customers fall outside the 'normal' behavior in regard to the price they are receiving?
+1. How can complexities in pricing strategy be captured by a statistically rigorous modeling framework? (E.g. when volume dictates price)
+
+In this post, I will focus on question one. For my examples, I will use data from the Ames, Iowa housing market. See the [Dataset considerations] section for why I use the [ames](link to make_ames function) dataset as an analogue for B2B selling / pricing scenarios (as well as problems with this choice). My examples were built using the R programming language, you can find the source code at [my github]() page.
 
 # What influeces price?
 
 **Dollars per unit:**
 
-Products have features. These features^[Dataset should be structured such that each feature is a column and each row an observation, e.g. a sale] can be used to train a model to estimate price. For a linear model, the outputted coefficents associated with these features can be thought of as pseudo-proxies for the expected *dollar per unit* value associated with the component ([ceteris paribus](https://en.wikipedia.org/wiki/Ceteris_paribus)). Let's build a simple model for home price that uses *just* square footage as a feature for predicting price paid. 
+Products have features. These features^[Dataset should be structured such that each feature is a column and each row an observation, e.g. a sale] can be used to train a model to estimate price. For a linear model, the outputted coefficents associated with these features can (sort of) act as proxies for the expected *dollar per unit* change associated with the component ([ceteris paribus](https://en.wikipedia.org/wiki/Ceteris_paribus)). 
 
-The model comes out to: ... (use package that converts `stats::lm` model output into latex). The coefficeint on sale price is (kind of) a measure of expected dollars per square foot. If you build the model without an intercept^[I.e. make it zero], the coefficient more directly represents dollar / square foot (would get a coefficient / $ per square foot of __). However it's *typically* more appropriate to [leave the intercept in the model](link to SO post with evidence).
+```{r}
+library(tidymodels)
+library(tidyverse)
+library(AmesHousing)
+```
 
-**Model assumptions, robust methods**:
+```{r}
+ames <- AmesHousing::make_ames()
 
-Linear regression has a variety of [model assumptions](link to assumptions of linear regression), if you are building a model primarily for prediction, you do not need to worry about these as much^[At least to the extent that satisfying them doesn't improve your predictions.]. However if you are building the model to perform inference (e.g. trying to interpret the coefficients as representing the value-add of different components of a product) these assumptions matter more. For our simple model we can see we break the assumption of __.
+ames <- ames %>% 
+  mutate(bathrooms = Full_Bath + 0.5 * Half_Bath,
+         total_sqft = Gr_Liv_Area + Bsmt_Unf_SF)
+```
 
-__graph checking model assumptions for our simple model__
+Let's build a simple model for home price that uses *just* house square footage (not including basement), represented by `Gr_Liv_Area` as a feature for predicting home price. 
 
-Often you will perform transformations on your variables that aide you in satsifying these assumptions -- however doing such changes the interpretation of your coefficients^[E.g. a log transform on an input changes the interpretation of the coefficient to be something closer to dollar per percentage change of input.] You may also simply use a linear model algorithm whose estimates are [robust](link to definition of robust) under violations of these assumptions. Using a robust linear estimator, our coefficient is: ___ .
+```{r simple-model-equation, results = 'asis'}
+mod_sqft <- lm(Sale_Price ~ Gr_Liv_Area, data = ames)
 
-**Multiple variables and the tug-of-war between collinear inputs**:
+mod_sqft_noint <- lm(Sale_Price ~ Gr_Liv_Area - 1, data = ames)
 
-Let's add to our original model a new variable: number of bathrooms (I will continue to use a robust estimator). 
+mod_gr_latex <- equatiomatic::extract_eq(mod_sqft, use_coefs = TRUE, coef_digits = 1)
 
-__Figure of model coefficients with new variables added__
+mod_gr_latex
+```
 
-Notice that the coefficient on square footage has decreased -- this is because number of bathrooms and square footage of house are highly correlated (correlation of ...). The new model parameters are estimated while taking each of these factors into account. Some of the impact that previously existed entirely in the coefficient on square footage is now shared between these two coefficients. At its extreme, this can lead to potentially unintuitive results. For example, if we add another variable: `number of bedrooms`, we see the estimate for the coefficient (which is also highly correlated with the existing model inputs) is actually negative. __MODEL WITH THREE VARIABLES__ This doesn't mean houses with more bedrooms are associated with negative house prices, though it suggests that a house with the same square footage and number of bathrooms will be less expensive if it has more bedrooms (perhaps representing a preference for larger rooms or open spaces). 
+The coefficient on sale price of *111.7* is a measure of expected dollars per unit change in square foot. If you build the model without an intercept^[I.e. make it zero so that the expected value of a house of 0 square foot is $0], the coefficient more directly equates to dollars per square foot^[In this case, the coefficient for the model becomes 119.7 if the intercept is set to zero.]. However it's *almost always* more appropriate to [leave the intercept in the model](https://stats.stackexchange.com/questions/7948/when-is-it-ok-to-remove-the-intercept-in-a-linear-regression-model).
 
-Standard linear regression models feature this tug-of-war like optimization whereby correlated variables share (/ battle over) a general influence on the model. This can cause variable coefficients that would, in a univariable context be similar, seem to move in opposing directions when considered together in multivariable contexts. In pricing analysis exercises (where you care about the individual parameter estimates and want them to be meaningful) this behavior may be desirable, but it has potential drawbacks^[It depends :-/]:
+## Model assumptions, robust methods
 
-* As you increase the number of variables in the model, this effect can make for models with a high degree of instability / variance in the values of the coefficients -- meaning that the coefficients in your model can change dramatically even from small changes in the data^[This is what "variance" means in the bias-variance trade-off in model development.]
-* You may want to limit models with unintuitive variable relationships (e.g. where highly related factors have coefficients that seem to act in opposing directions).
+Linear regression has a variety of [model assumptions](https://en.wikipedia.org/wiki/Linear_regression#Assumptions). Following these is less important when using the model for predictions compared to making inferences^[At least to the extent that satisfying them doesn't improve your predictions, or suggest a different model type may be more appropriate.]. If you are interpretting the coefficients as representions of the value-add associated with components of a product, model assumptions matter. 
 
-Two common approaches:
+Transformations are often applied to the data to help satsify these assumptions and minimize the impact of outliers and influential points However (important in the pricing analysis context) such modification alters the meaning of the coefficients^[E.g. a log transform on an input changes the interpretation of the coefficient to be something closer to dollar per percentage change of input.]. The analyst may also opt to use an optimization algorithm that produces estimates [robust](https://en.wikipedia.org/wiki/Robust_regression) to influential points and violations of model assumptions. Using robust regression, our model is:
 
-* *Regularization*: puts constraints on the linear model that discourage high levels of variance in your coefficient estimates. See the section [Regularization and colinear variables] for a more full discussion on this.
-* *Bayesian approaches*: can use [priors](link to definition of priors in linear model) and rigorous estimation procedures to limit  [overfitting](link to overfitting) and subdue extreme estimates
+```{r}
+mod_sqft_robust <- MASS::rlm(Sale_Price ~ Gr_Liv_Area, data = ames)
+```
 
-Each will modulate coefficient estimates differently in conditions of multicolinearity of model variables. The model below shows the coefficient estimates for each of several model types^[Variables are usually be standardized before applying regularization. If our goal is interpretting the coefficient estimates, we may need to transform the coefficients for interpretation purposes.].
+$$
+\operatorname{Sale\_Price} = 15500.4 + 108.1(\operatorname{Gr\_Liv\_Area}) + \epsilon
+$$
+
+## The tug-of-war between colinear inputs
+
+Let's add to our (robust regression) model a new variable: number of bathrooms represented by the `bathrooms` variable. 
+
+```{r}
+mod_2_robust <- MASS::rlm(Sale_Price ~ Gr_Liv_Area + bathrooms, data = ames)
+
+ames %>% 
+  select(Gr_Liv_Area, bathrooms) %>% 
+  cor()
+```
+
+$$
+\operatorname{Sale\_Price} = 12147 + 87.35(\operatorname{Gr\_Liv\_Area}) + 19178.3(\operatorname{bathrooms}) + \epsilon
+$$
+
+Notice the coefficient on square footage has decreased -- this is because number of bathrooms and square feet of home are highly correlated (they have a [correlation](https://en.wikipedia.org/wiki/Pearson_correlation_coefficient) of 0.71). The new estimates are created while taking more factors into account. Some of the impact on home price that previously existed entirely in the coefficient for `Gr_Liv_Area` is now shared with the highly related `bathrooms` variable. This phenomena can lead to unintuitive results.
+
+```{r}
+MASS::rlm(Sale_Price ~ Gr_Liv_Area + bathrooms + Bedroom_AbvGr, data = ames)
+
+MASS::rlm(Sale_Price ~ Bedroom_AbvGr, data = ames) %>% 
+  summary()
+
+ames %>% 
+  dplyr::select(where(is.numeric)) %>% 
+  corrr::correlate() %>% 
+  corrr::rearrange() %>% 
+  corrr::rplot()+
+  scale_x_discrete(guide = guide_axis(angle = 90))
+
+library(corrr)
+ames %>% 
+  dplyr::select(contains(c("SF", "Area"))) %>% 
+  corrr::correlate() %>% 
+  corrr::rearrange(method = "HC") %>%
+  corrr::rplot()+
+  scale_x_discrete(guide = guide_axis(n.dodge = 2))
+```
+
+For example, let's consider another variable: `Bedroom_AbvGr` which represents the number of bedrooms in the home (excluding those in the basement). If we build a robust simple linear regression model, we see there is a 
+
+e see the estimate for the coefficient (which is also highly correlated with `number of bathrooms` and `square feet`) is actually negative. __MODEL WITH THREE VARIABLES__ This doesn't mean houses with more bedrooms are associated with negative house prices. Though it suggests a house with the same square footage and number of bathrooms will be less expensive if it has more bedrooms (perhaps representing a preference for larger rooms / open space among buyers). 
+
+Typical linear regression models feature this tug-of-war like optimization whereby correlated variables share (/ battle over) a general influence on the model. At times this causes similar variable to seem to have opposing impacts. When evaluating coefficients for pricing analysis exercises^[Where you care about the individual parameter estimates and want them to be meaningful.] this behavior has potential drawbacks^[This may also be beneficial -- it depends :-/]:
+
+* As you increase the number of variables in the model, this effect can make for models with a high degree of instability / variance in the parameter estimates -- meaning that the coefficients in your model could change dramatically even from small changes in the training data^[This is what "variance" means in the bias-variance trade-off common in model development.]
+* You may want to limit methods that result in models with unintuitive variable relationships (like those discussed where highly related factors have coefficients that appear to act in opposing directions).
+
+### Remedies
+
+Two potential approaches:
+
+* *Regularization*: puts constraints on the linear model that discourage high levels of variance in your coefficient estimates. See the section [Regularization and colinear variables] for a more full discussion on how L1 & L2 penalties affect estimates for colinear model inputs.
+* *Bayesian approaches*: can use [priors](link to definition of priors in linear model) and rigorous estimation procedures to limit  [overfitting](link to overfitting) and subdue extreme estimates.
+
+Each will modulate coefficient estimates differently. The figure below shows the coefficient estimates when using each of these methods.
 
 __plot of coefficient estimates from different models__
 
 Note differences...
+
+I typically do...
+
+
+## Significance vs effect size
+
+Look for variables that are important but not overly colinear with house size. E.g. lot size.
+
+
+# Closing note
+
+You can use regression models to evaluate the impact of different factors on price. It is important to consider how coefficient estimates will respond to violations of your model assumptions, particularly those of multi-colinearity and to use estimation techniques that are appropriate for your problem. 
+
+If you have questions or feedback feel free to direct message me at [brshallo](link). I will cover the other questions noted in [Problem Context] in a series of upcoming posts.
 
 # How have influential factors changed over time?
 
 If you want to evaluate a general impact of year / time on price, you could simply include it as a variable in the model and see the associated variable. If you want to evaluate how the influence of factors has *changed* over time however you could simply build models between different years and compare the coefficient estimates.
 
 The chart below shows coefficient estimates for variables ... across ... years in the data. I used method ... to build the model.
+
+Have something about function for modulating further back items on pricing...
 
 __Chart of coefficients for each year__
 
@@ -121,7 +210,7 @@ There are many important differences between home sales and B2B sales that make 
 
 Though for the notes in this post, this didn't matter.
 
-# Regularization and colinear variables
+## Regularization and colinear variables
 
 Regularization typically comes in two flavors, either an L1 penalty (lasso regression) or L2 penalty (ridge regression), or some combination of these (elastic net) is applied to the linear model. These penalties provides a cost for larger coefficient which acts to decrease the variance in our estimates[^1]. In conditions of colinear inputs, these two penalties act differently on coefficient estimates of colinear features: 
 
@@ -129,3 +218,7 @@ Regularization typically comes in two flavors, either an L1 penalty (lasso regre
 * For ridge regression, coefficients of similar variables gravitate to a similar value
 
 [^1]: In both cases non-informative regressors will tend towards zero (in the case of ridge regression, they will never *quite* reach zero). These approaches typically require tuning to identify the ideal weight (i.e. pressure) assigned to the penalty. 
+
+## Coefficients of a regularized model
+
+Variable inputs are usually standardized before applying regularization. Hence because inputs are all (essentially) put on the same scale, the coefficient estimates can be directly compared with one another as measures of their relative influence on the target (home price). This ease of comparison may be convenient, though if our goal is interpretting the coefficient estimates in terms of dollar change per unit increase, we may need to transform the coefficients. This is what was done in figure ... by ...
